# EC601_Project

./: 1inliers2.pcd  3D_PointCloud_Processing.py  3D_PointCloud_ProcessingPart2.ipynb  3D_PointCloud_ProcessingPart2.py  LICENSE  PointCloudTutorial.ipynb  README.md  RRTpathplan.m  Simple2obst.txt  UsefulResources  another_rrt.py  index.md  outliers.pcd  ptcloud7.txt  readme.md  “EC500_Opt4ML_PA2_SOLUTIONS_ipynb”的副本.ipynb  “EC500_PA3_SOLUTIONS_ipynb”的副本.ipynb  “EC500_ProgrammingSet1_SOLUTIONS_ipynb”的副本.ipynb
A-LOAM/rviz_cfg/: aloam_velodyne.rviz
FilterReaserch/: README.md  object3d.pcd
FilterReaserch/SourceCode/: remove_outliers.cpp  statistical_removal.cpp
FilterReaserch/workspace/StatisticRemovalFilter/: CMakeLists.txt  statistical_removal.cpp
FilterReaserch/workspace/VoxelGridFilter/: CMakeLists.txt  voxel_grid.cpp
PathPlanningFinal/: 1638218635.463911295.pcd  RRT-3D-class.py  final_pc_parsing.py  inlierfilterpcd.xyz  object3d.pcd  object3dfiltered.xyz  rrt.py
PathPlanningResearch/: Simple2obst.txt  another_rrt.py  main.py  ptcloud7.txt
PointCloudResearch/: 3D_LIDAR_Data.ipynb  3D_PointCloud_Processing.py
Registration/: ICPalgorithm.m  NDTalgorithm.m  PhaseCorrelation.m  object3dT.pcd  presetation.md
